# sequencerSeal

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
cmake/: GenerateGitVersion.cmake
scripts/: codesign.py  notarize_config.yaml  sample.yaml  yoshih_dev.yaml
scripts/BuiltPlugins/: pixelLicense.txt
scripts/installer_mac/: make_installer.sh
scripts/installer_mac/Resources/: Readme.rtf  license.txt
